# SegFaulting

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: db.py  gps_to_enu.py  integrator.py  log_parser.py  main.py
src/services/: flight_service.py
src/static/css/: results.css
src/static/js/: script.js
src/templates/: results.html  upload.html
test/sgfiusdzhf/: README.md  convertGPS_to_ENU.py  gps_to_enu.py  integrator.py  log_parser.py  main.py  requirements.txt
test/sgfiusdzhf/static/css/: results.css  upload.css
test/sgfiusdzhf/static/js/: script.js
test/sgfiusdzhf/templates/: results.html  upload.html
tests/: conftest.py  test_gps_to_enu.py  test_integrator.py  test_log_parser.py  test_main.py
