[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fileflow"
version = "1.0.1"
description = "Drone telemetry log analysis web application"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "python-multipart==0.0.22",
    "jinja2==3.1.6",
    "aiofiles==25.1.0",
    "aiosqlite==0.22.1",
    "pymavlink==2.4.49",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "scipy==1.17.1",
    "ahrs==0.4.0",
    "pymap3d==3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
